# wildjepa

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: config.yaml  erm_baseline_config.yaml
configs/backend/: fb_ijepa.yaml  hf_ijepa.yaml  scratch.yaml
configs/data/: iwildcam_full.yaml  iwildcam_subset.yaml  synthetic.yaml
configs/device/: auto.yaml  cpu.yaml  cuda.yaml  mps.yaml
configs/train/: erm_baseline.yaml  quick_check.yaml
docs/: configuration.md  design.md  lifecycle.md  roadmap.md  usage.md
scripts/: download_data.py  evaluate.py  manage_runs.py  train.py  train_erm_baseline.py
src/wildjepa/: __init__.py
src/wildjepa/data/: __init__.py  collate.py  iwildcam.py  synthetic.py
src/wildjepa/eval/: __init__.py  baselines.py  metrics.py
src/wildjepa/models/: __init__.py  base.py
src/wildjepa/models/fb_ijepa/: __init__.py
src/wildjepa/models/hf_ijepa/: __init__.py
src/wildjepa/models/scratch/: __init__.py  ema.py  loss.py  masking.py  patch_embed.py  pos_embed.py  predictor.py  vit.py
src/wildjepa/train/: __init__.py  common.py  erm_baseline.py  finetune.py  linear_probe.py  pretrain.py
src/wildjepa/utils/: checkpoint.py  device.py  seed.py
tests/: test_backend_factory.py  test_common.py  test_device.py  test_erm_baseline.py  test_integration_tiny_pretrain.py  test_loss.py  test_masking.py  test_metrics.py  test_metrics_logger.py  test_predictor_and_ema.py  test_synthetic_data.py  test_vit.py
